--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "theorphanage-bot",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "main": "dist/index.js",
-  "author": "@sapphire",
-  "license": "UNLICENSE",
+  "author": "NorthernStar",
+  "license": "MIT",
   "dependencies": {
     "@sapphire/decorators": "^6.0.0",
     "@sapphire/discord-utilities": "^3.0.0",
