--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@sapphire/type": "^2.3.0",
     "@sapphire/utilities": "^3.11.0",
     "@skyra/env-utilities": "^1.1.0",
-    "discord.js": "^14.7.1"
+    "@types/minecraft-pinger": "^1.0.0",
+    "discord.js": "^14.7.1",
+    "minecraft-pinger": "^1.0.5"
   },
   "devDependencies": {
     "@sapphire/prettier-config": "^1.4.5",
