--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "NorthernStar",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/voice": "^0.14.0",
     "@sapphire/decorators": "^6.0.0",
     "@sapphire/discord-utilities": "^3.0.0",
     "@sapphire/discord.js-utilities": "6.0.1",
@@ -20,6 +22,9 @@
     "@skyra/env-utilities": "^1.1.0",
     "@types/minecraft-pinger": "^1.0.0",
     "discord.js": "^14.7.1",
+    "distube": "^4.0.3",
+    "ffmpeg-static": "^4.4.1",
+    "libsodium-wrappers": "^0.7.11",
     "minecraft-pinger": "^1.0.5"
   },
   "devDependencies": {
