--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -21,5 +21,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Build
-      run: npm install && npm run dev
+      run: npm install
+           npm run dev
          
