--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -21,6 +21,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Build
-      run: npm install
-           npm run dev
+    - run: npm install
+    - run: npm run dev
          
