--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -20,7 +20,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Build
-    - run: npm install
-    - run: npm run dev
+    - name: Install
+      run: npm install
+    - name: Run
+      run: npm run dev
          
