--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "@skyra/env-utilities": "^1.1.0",
     "@types/minecraft-pinger": "^1.0.0",
     "canvacord": "^5.4.8",
+    "discord-player": "^5.4.0",
     "discord.js": "^14.7.1",
-    "distube": "^4.0.3",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^4.4.1",
     "libsodium-wrappers": "^0.7.11",
     "minecraft-pinger": "^1.0.5",
-    "mongoose": "^6.10.0"
+    "mongoose": "^6.10.0",
+    "opusscript": "^0.0.8",
+    "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
     "@sapphire/prettier-config": "^1.4.5",
