Migrate to discord-player v6

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "NorthernStar",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/opus": "^0.8.0",
+    "@discord-player/extractor": "^4.1.0",
+    "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.14.0",
     "@sapphire/decorators": "^6.0.0",
     "@sapphire/discord-utilities": "^3.0.0",
@@ -22,14 +23,13 @@
     "@skyra/env-utilities": "^1.1.0",
     "@types/minecraft-pinger": "^1.0.0",
     "canvacord": "^5.4.8",
-    "discord-player": "^5.4.0",
+    "discord-player": "^6.0.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^4.4.1",
     "libsodium-wrappers": "^0.7.11",
     "minecraft-pinger": "^1.0.5",
     "mongoose": "^6.10.0",
-    "opusscript": "^0.0.8",
     "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
